--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,9 +9,9 @@ jobs.pool = 10
 site.name = 定时任务管理器
 
 # 数据库配置
-db.host = 127.0.0.1
-db.user = root
-db.password = "" 
+db.host = 192.168.11.60
+db.user = web60
+db.password = "web60p4pwd09" 
 db.port = 3306
 db.name = webcron
 db.prefix = t_
